Fix navigation position on mobile

--- a/gnNews/src/styles/navigation/Navigation.scss
+++ b/gnNews/src/styles/navigation/Navigation.scss
@@ -12,7 +12,6 @@ nav {
 @media screen and (max-width: 768px) {
   nav {
     position: fixed;
-    top: 60px;
 
     transform: translateX(-100%);
     transition: transform 0.3s;
@@ -20,5 +19,19 @@ nav {
 
   .menu-opened {
     transform: translateX(0);
+  }
+}
+
+@media screen and (max-width: 480px) {
+  nav {
+    height: calc(100vh - 50px);
+    top: 50px;
+  }
+}
+
+@media screen and (max-height: 480px) and (orientation: landscape) {
+  nav {
+    height: calc(100vh - 50px);
+    top: 50px;
   }
 }
